--- a/BnrScrapper/BnrScrapper.csproj
+++ b/BnrScrapper/BnrScrapper.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.4" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
