--- a/BnrScrapperLogic/BnrScrapperLogic.csproj
+++ b/BnrScrapperLogic/BnrScrapperLogic.csproj
@@ -1,17 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.8.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BnrScrapperLogic\BnrScrapperLogic.csproj" />
   </ItemGroup>
 
 </Project>
