--- a/RateApi/RateApi.csproj
+++ b/RateApi/RateApi.csproj
@@ -20,4 +20,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BnrScrapperLogic\BnrScrapperLogic.csproj" />
+  </ItemGroup>
+
 </Project>
