--- a/BnrScrapperLogic/BnrScrapperLogic.csproj
+++ b/BnrScrapperLogic/BnrScrapperLogic.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\.nuget\packages\newtonsoft.json\11.0.2\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
