add auth0 authentication.

--- a/RateApi/appsettings.json
+++ b/RateApi/appsettings.json
@@ -1,7 +1,11 @@
 ﻿{
   "ApplicationInsights": {
     "ApplicationName": "RateApi",
-    "DisableInstrumentation": "false" 
+    "DisableInstrumentation": "false"
+  },
+  "Auth0": {
+    "Domain": "developingtoday.eu.auth0.com",
+    "ApiIdentifier": "https:/rateapi"
   },
   "Logging": {
     "IncludeScopes": false,
