--- a/rateclient/package.json
+++ b/rateclient/package.json
@@ -23,10 +23,12 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "auth0-js": "^9.8.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
+    "@types/auth0-js": "^8.11.5",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.28.3",
